force-app/main/default/objects/Invoice__c/fields/ACV_Form__c.field-meta.xml
<CustomField>
    <fullName>ACV_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACV Form</label>
    <referenceTo>ACV_Form__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>