force-app/main/default/objects/Invoice__c/fields/Additional_County_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Additional_County_Tax_Percent__c</fullName>
    <formula>Quote__r.Additional_County_Tax_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional County Tax Percent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>