force-app/main/default/objects/Invoice__c/fields/Additional_Total_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Additional_Total_Tax_Percent__c</fullName>
    <formula>Quote__r.Additional_Sales_Tax_Percent_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Total Tax Percent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>