force-app/main/default/objects/Invoice__c/fields/APPROVED_ACV__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_ACV__c</fullName>
    <formula>ACV_Form__r.Approved_ACV__c</formula>
    <label>APPROVED ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>