force-app/main/default/objects/Invoice__c/fields/Backend_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Backend_Funding_Amount__c</fullName>
    <description>This is the amount of the funding that goes to the amount you make on the loan</description>
    <label>Backend Funding Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>