force-app/main/default/objects/Invoice__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>if(NOT(ISNULL(Total_Payment__c)), Total_Amount_on_Invoice__c - Total_Payment__c - Discount_With_Promocode__c , Total_Amount_on_Invoice__c - Discount_With_Promocode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Total Amount - Total Payment</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>