force-app/main/default/objects/Invoice__c/fields/Boat_Costline__c.field-meta.xml
<CustomField>
    <fullName>Boat_Costline__c</fullName>
    <formula>Inventory__r.Boat_Costline__c</formula>
    <inlineHelpText>Formula :Comes From Inventory&apos;s Boat Costline field.</inlineHelpText>
    <label>Boat Costline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>