force-app/main/default/objects/Invoice__c/fields/Boat_Profit__c.field-meta.xml
<CustomField>
    <fullName>Boat_Profit__c</fullName>
    <formula>Booked_Sale_Price__c  -  Manufacture_Invoice2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>