force-app/main/default/objects/Invoice__c/fields/Boat_Reg_Fee__c.field-meta.xml
<CustomField>
    <fullName>Boat_Reg_Fee__c</fullName>
    <label>Boat Reg Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>