force-app/main/default/objects/Invoice__c/fields/Boat_Sales_Tax_Formula__c.field-meta.xml
<CustomField>
    <fullName>Boat_Sales_Tax_Formula__c</fullName>
    <formula>Boat_Sales_Tax_Formula_Backend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculates the Boat Sales tax,on the basis of state.</inlineHelpText>
    <label>Boat Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>