force-app/main/default/objects/Invoice__c/fields/Boat_Sales_Tax_Formula_Backend__c.field-meta.xml
<CustomField>
    <fullName>Boat_Sales_Tax_Formula_Backend__c</fullName>
    <label>Boat Sales Tax Formula Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>