force-app/main/default/objects/Invoice__c/fields/Boat_Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Boat_Sold_By__c</fullName>
    <label>Boat Sold By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Josh Smith</fullName>
            </value>
            <value>
                <fullName>Cameron Richardson</fullName>
            </value>
            <value>
                <fullName>JJ Penninger</fullName>
            </value>
            <value>
                <fullName>Danny Tolentino</fullName>
            </value>
            <value>
                <fullName>Alex Dunson</fullName>
            </value>
            <value>
                <fullName>Tyler Holloman</fullName>
            </value>
            <value>
                <fullName>Tanner Lawson</fullName>
            </value>
            <value>
                <fullName>Robert Lowery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>