force-app/main/default/objects/Invoice__c/fields/Boat_Trade_Over_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Boat_Trade_Over_Allowance__c</fullName>
    <formula>Trade_Allowance__c  -  Trade_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculated by subtracting Trade ACV from Trade Allowance.</inlineHelpText>
    <label>Boat Trade Over Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>