force-app/main/default/objects/Invoice__c/fields/Booked_ACV__c.field-meta.xml
<CustomField>
    <fullName>Booked_ACV__c</fullName>
    <formula>Trade_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>