force-app/main/default/objects/Invoice__c/fields/Booked_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Booked_Sale_Price__c</fullName>
    <formula>Sale_Price__c  -  Total_Over_Allowance__c -  Miscellaneous_COGS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculated by subtracting Total Over Allowance from Sale Price</inlineHelpText>
    <label>Booked Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>