force-app/main/default/objects/Invoice__c/fields/Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate__c</fullName>
    <description>This is the rate we buy the loan at</description>
    <label>Buy Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>