force-app/main/default/objects/Invoice__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Specifies the City of the Customer.</description>
    <inlineHelpText>Specifies the City of the Customer.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>