force-app/main/default/objects/Invoice__c/fields/Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_Notes__c</fullName>
    <label>Comments/Notes</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>