force-app/main/default/objects/Invoice__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <label>Commission Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>