force-app/main/default/objects/Invoice__c/fields/Consignment_Actual_Pay_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Actual_Pay_Off_Date__c</fullName>
    <label>Consignment Actual Pay Off Date</label>
    <type>Date</type>
</CustomField>