force-app/main/default/objects/Invoice__c/fields/Consignment_Pay_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Pay_Off_Amount__c</fullName>
    <label>Consignment Pay Off Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>