force-app/main/default/objects/Invoice__c/fields/Consignment_Pay_Off_Bank__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Pay_Off_Bank__c</fullName>
    <label>Consignment Pay Off Bank</label>
    <length>30</length>
    <type>Text</type>
</CustomField>