force-app/main/default/objects/Invoice__c/fields/Consignment_Pay_Off_Customer__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Pay_Off_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignment Pay Off Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Consignment Pay Off Customer)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>