force-app/main/default/objects/Invoice__c/fields/Consignment_Pay_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Pay_off_Date__c</fullName>
    <label>Consignment Pay off Date</label>
    <type>Date</type>
</CustomField>