force-app/main/default/objects/Invoice__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <description>Specifies the Mailing Address of the Customer.</description>
    <inlineHelpText>Specifies the Mailing Address of the Customer.</inlineHelpText>
    <label>Customer Address</label>
    <type>TextArea</type>
</CustomField>