force-app/main/default/objects/Invoice__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Specifies the Name of the Customer.</description>
    <inlineHelpText>Specifies the Name of the Customer.</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>