force-app/main/default/objects/Invoice__c/fields/Date_Loan_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Processed__c</fullName>
    <label>Date Loan Processed</label>
    <type>Date</type>
</CustomField>