force-app/main/default/objects/Invoice__c/fields/Deal_Margin2__c.field-meta.xml
<CustomField>
    <fullName>Deal_Margin2__c</fullName>
    <formula>( Booked_Sale_Price__c -  Manufacture_Invoice2__c ) / Booked_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>