force-app/main/default/objects/Invoice__c/fields/Deal_Profit__c.field-meta.xml
<CustomField>
    <fullName>Deal_Profit__c</fullName>
    <formula>Booked_Sale_Price__c -  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>