force-app/main/default/objects/Invoice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provide a brief description of the Items in Invoice.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>