force-app/main/default/objects/Invoice__c/fields/Discount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Invoice__c</fullName>
    <label>Discount on Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>