force-app/main/default/objects/Invoice__c/fields/Discount_With_Promocode__c.field-meta.xml
<CustomField>
    <fullName>Discount_With_Promocode__c</fullName>
    <formula>if(Promo_Code__r.End_Date__c &lt;&gt; null,
IF( DATEVALUE(CreatedDate) &lt;= Promo_Code__r.End_Date__c &amp;&amp; DATEVALUE(CreatedDate) &gt;= Promo_Code__r.Start_Date__c, 


IF(ISPICKVAL(Promo_Code__r.Discount_In__c, &apos;Amount&apos;), Promo_Code__r.Discount_Amount__c , IF(ISPICKVAL(Promo_Code__r.Discount_In__c, &apos;Percentage&apos;), (Payment__c * Promo_Code__r.Discount_Percentage__c ), 0))



, 0.00) , 
IF(ISPICKVAL(Promo_Code__r.Discount_In__c, &apos;Amount&apos;), Promo_Code__r.Discount_Amount__c , IF(ISPICKVAL(Promo_Code__r.Discount_In__c, &apos;Percentage&apos;), (Payment__c * Promo_Code__r.Discount_Percentage__c ), 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount With Promocode</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>