force-app/main/default/objects/Invoice__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Specifies the Email of the customer.</description>
    <inlineHelpText>Specifies the Email of the customer.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>