force-app/main/default/objects/Invoice__c/fields/Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Engine_SN__c</fullName>
    <label>Engine SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>