force-app/main/default/objects/Invoice__c/fields/Floor_Plan_Actual_Pay_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Actual_Pay_Off_Date__c</fullName>
    <label>Floor Plan Actual Pay Off Date</label>
    <type>Date</type>
</CustomField>