force-app/main/default/objects/Invoice__c/fields/Floor_Plan_Actual_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Actual_Payoff_Amount__c</fullName>
    <label>Floor Plan Actual Pay-off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>