force-app/main/default/objects/Invoice__c/fields/Floor_Plan_Pay_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Pay_Off_Amount__c</fullName>
    <label>Floor Plan Pay Off Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>