force-app/main/default/objects/Invoice__c/fields/Floor_Plan_Pay_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Pay_off_Date__c</fullName>
    <label>Floor Plan Pay-off Date</label>
    <type>Date</type>
</CustomField>