force-app/main/default/objects/Invoice__c/fields/Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funded_Amount__c</fullName>
    <description>They amount funded by the bank Including back end</description>
    <label>Funded Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>