force-app/main/default/objects/Invoice__c/fields/Grand_Total_after_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_after_Discounts__c</fullName>
    <formula>Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total after Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>