force-app/main/default/objects/Invoice__c/fields/Grand_Total_ILI__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_ILI__c</fullName>
    <label>Grand Total (ILI)</label>
    <summarizedField>Invoice_Line_Item__c.Grand_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>