force-app/main/default/objects/Invoice__c/fields/HIN_No__c.field-meta.xml
<CustomField>
    <fullName>HIN_No__c</fullName>
    <label>HIN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>