force-app/main/default/objects/Invoice__c/fields/Invoice_Margin__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Margin__c</fullName>
    <formula>(Grand_Total_ILI__c - Sales_Tax_Formula__c)/ Total_Profit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>