force-app/main/default/objects/Invoice__c/fields/Invoice_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Formula__c</fullName>
    <formula>VALUE( Invoice_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>