force-app/main/default/objects/Invoice__c/fields/Invoice_Rate__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rate__c</fullName>
    <label>Invoice Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>