force-app/main/default/objects/Invoice__c/fields/Lending_Bank__c.field-meta.xml
<CustomField>
    <fullName>Lending_Bank__c</fullName>
    <label>Lending Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank of the West</fullName>
            </value>
            <value>
                <fullName>Huntington Bank</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Aqua Finance</fullName>
            </value>
            <value>
                <fullName>South State Bank</fullName>
            </value>
            <value>
                <fullName>USAA</fullName>
            </value>
            <value>
                <fullName>State Farm</fullName>
            </value>
            <value>
                <fullName>Marathon Bank</fullName>
            </value>
            <value>
                <fullName>Medalion Bank</fullName>
            </value>
            <value>
                <fullName>Merrick Bank</fullName>
            </value>
            <value>
                <fullName>BB&amp;T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>