force-app/main/default/objects/Invoice__c/fields/Loan_Rate__c.field-meta.xml
<CustomField>
    <fullName>Loan_Rate__c</fullName>
    <description>This is what the customer paid for the rate</description>
    <label>Loan Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>