force-app/main/default/objects/Invoice__c/fields/Manufacture_Invoice2__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Invoice2__c</fullName>
    <label>Manufacture Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>