force-app/main/default/objects/Invoice__c/fields/Miscellaneous_COGS__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_COGS__c</fullName>
    <label>Miscellaneous COGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>