force-app/main/default/objects/Invoice__c/fields/MSRP_Boat_Price__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Boat_Price__c</fullName>
    <label>MSRP Boat Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>