force-app/main/default/objects/Invoice__c/fields/Negotiated_MSRP_Price__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_MSRP_Price__c</fullName>
    <label>Negotiated MSRP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>