force-app/main/default/objects/Invoice__c/fields/Net_Selling_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Selling_Price_Formula__c</fullName>
    <formula>IF(( Trade_Allowance__c +  Trailer_Allowance__c  )&lt;  Your_Price__c ,Your_Price__c - (Trade_Allowance__c+Trailer_Allowance__c) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculated by deducting the sum of Trade and Trailer Allowances from the Your Price Formula</inlineHelpText>
    <label>Net Selling Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>