force-app/main/default/objects/Invoice__c/fields/Non_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Taxable</label>
    <type>Checkbox</type>
</CustomField>