force-app/main/default/objects/Invoice__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <inlineHelpText>Specifies the Payment to be made,after deductions of all Sorts of Discounts from the Price of Line Items.</inlineHelpText>
    <label>Net</label>
    <summarizedField>Invoice_Line_Item__c.Grand_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Related_To_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>