force-app/main/default/objects/Invoice__c/fields/Payoff_Account_Payable__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Account_Payable__c</fullName>
    <label>Payoff Account Payable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>North Pointe</fullName>
            </value>
            <value>
                <fullName>Consignment Pay-off Bank</fullName>
            </value>
            <value>
                <fullName>Consignment Customer Pay-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>