force-app/main/default/objects/Invoice__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Specifies the Phone of the Customer.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>