force-app/main/default/objects/Invoice__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Specifies the Phone Number of the Customer.</description>
    <inlineHelpText>Specifies the Phone Number of the Customer.</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>