force-app/main/default/objects/Invoice__c/fields/Prospect_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lead_Source__c</fullName>
    <formula>TEXT(Account_Name__r.Lead_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Lead Source</label>
    <type>Text</type>
</CustomField>