force-app/main/default/objects/Invoice__c/fields/PST__c.field-meta.xml
<CustomField>
    <fullName>PST__c</fullName>
    <label>PST(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>