force-app/main/default/objects/Invoice__c/fields/PST_D__c.field-meta.xml
<CustomField>
    <fullName>PST_D__c</fullName>
    <formula>IF(!ISBLANK(Sum_Taxable_Line_Items__c),(Sum_Taxable_Line_Items__c - Discount_With_Promocode__c ) *  PST__c  ,0.00 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PST($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>