force-app/main/default/objects/Invoice__c/fields/QBInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>QBInvoiceID__c</fullName>
    <label>QBInvoiceID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>