force-app/main/default/objects/Invoice__c/fields/QBInvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>QBInvoiceStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBInvoiceStatus</label>
    <type>Checkbox</type>
</CustomField>