force-app/main/default/objects/Invoice__c/fields/Quote_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_To_Name__c</fullName>
    <label>Quote To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>