force-app/main/default/objects/Invoice__c/fields/Quote_Trade_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trade_Payoff__c</fullName>
    <label>Quote Trade Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>