force-app/main/default/objects/Invoice__c/fields/Related_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Contact to which the Customer is related with.</description>
    <inlineHelpText>Specifies the Contact to which the Customer is related with.</inlineHelpText>
    <label>Related to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>